[package]
name = "docker-pg-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1" 
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "any", "postgres"] }
