[package]
name = "pg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6.1"
bcrypt = "0.13"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "any", "postgres"] }
